--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "ams.android.linkitmerchant"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 100
-        versionName "1.0.0"
+        versionCode 101
+        versionName '1.0.1'
     }
     buildTypes {
         release {
@@ -29,7 +29,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:3.1.+'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.instagram:ig-json-parser-processor:0.0.4+'
     compile 'com.android.support:appcompat-v7:21.0.+'
