--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+
         tools:replace="android:theme">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name">
@@ -38,6 +43,7 @@
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden|adjustPan"></activity>
 
         <service android:name=".Service.NotiHeadService" />
